# prime-zeta-research

./: .gitignore  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml
scripts/: 0_generate_primes.py  1_compute_need_cn.py  2_spectral_analysis.py  3_match_zeros.py  4_analyze_scalogram.py  5_save_R_dynamics.py  6_compare_fft_with_zeros.py
src/: __init__.py  config.py  config_loader.py
src/analysis/: li_function.py  regression.py  residuals.py  streaming_cn_li.py
src/database/: operations.py  schema.py
src/primes/: __init__.py  need.py  sieve.py  window.py
src/spectral/: __init__.py  fft_analysis.py  matching.py  resampling.py  wavelet_analysis.py  wavelet_plot.py
src/utils/: memory.py
